Use lucide, fix alignments

--- a/src/root.css
+++ b/src/root.css
@@ -53,31 +53,29 @@
     flex-direction: column;
     opacity: 0;
     gap: 8px;
-    translate: 0 -2vh;
-    scale: 0;
+    translate: 0;
     color: light-dark(hsl(215, 100%, 15%), hsl(215, 100%, 87%));
     background-color: light-dark(hsl(220, 35%, 75%), hsl(221, 36%, 15%));
     color: light-dark(hsl(220, 75%, 15%), hsl(220, 75%, 80%));
     border-radius: 4px;
     border: solid 1px light-dark(hsl(220, 30%, 72%), hsl(219, 30%, 35%));
     cursor: pointer;
-    transform-origin: top left;
-    transition: display 125ms allow-discrete, opacity 250ms ease-out,
-      translate 250ms ease-out, scale 250ms ease-out;
+    transform-origin: top;
+    transition: display 250ms allow-discrete,
+      opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      translate 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .menu[data-open="true"] {
     display: flex;
     opacity: 1;
-    translate: 0 1vh;
-    scale: 1;
+    translate: 0 0.5vh;
   }
 
   @starting-style {
     .menu[data-open="true"] {
       opacity: 0;
-      translate: 0 -2vh;
-      scale: 0;
+      translate: 0 -0.5vh;
     }
   }
 
@@ -88,15 +86,15 @@
     padding-inline: 8px;
     padding-block: 4px;
     border-radius: 4px;
-    border: solid 1px hsl(219, 100%, 72%);
+    border: solid 1px hsl(219, 100%, 85%);
     background-color: light-dark(hsl(220, 35%, 75%), hsl(221, 36%, 15%));
     color: light-dark(hsl(220, 75%, 15%), hsl(220, 75%, 80%));
     font-family: inherit;
     min-height: 36px;
-    font-size: 12px;
-    vertical-align: middle;
+    line-height: 0;
     white-space: nowrap;
     transition: background-color 0.25s ease;
+    width: min-content;
 
     &:hover {
       background-color: light-dark(hsl(220, 35%, 55%), hsl(221, 36%, 20%));
@@ -104,9 +102,7 @@
 
     .icon {
       color: light-dark(hsl(220, 75%, 5%), hsl(221, 75%, 81%));
-      width: 14px;
-      height: 14px;
-      margin-right: 4px;
+      margin: 0;
     }
   }
 
@@ -118,16 +114,16 @@
     margin: 4px;
     border-radius: 4px;
     transition: background-color 0.25s ease;
+    font-size: 14px;
+    line-height: 0;
 
     &:hover {
       background-color: light-dark(hsl(220, 30%, 90%), hsl(218, 29%, 30%));
     }
 
     .icon {
-      color: light-dark(hsl(221, 75%, 25%), hsl(220, 75%, 80%));
-      width: 14px;
-      height: 14px;
       margin-right: 4px;
+      color: light-dark(hsl(221, 75%, 25%), hsl(220, 75%, 80%));
     }
   }
 
@@ -164,16 +160,26 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.25rem;
-    color: light-dark(hsl(215, 100%, 15%), hsl(215, 100%, 87%));
+    color: light-dark(hsl(215, 100%, 15%), hsl(215, 100%, 90%));
     text-decoration: none;
-    transition: color 0.25s ease, background-color 0.25s ease;
-    padding: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    padding-inline: 8px;
+    padding-block: 4px;
+    min-height: 36px;
     border-radius: 8px;
     cursor: pointer;
+    line-height: 0;
+
+    .icon {
+      margin-right: 8px;
+    }
+
     &:hover {
-      color: light-dark(hsl(215, 100%, 25%), hsl(215, 100%, 75%));
-      background-color: light-dark(hsl(215, 100%, 80%), hsl(215, 100%, 30%));
+      color: light-dark(hsl(215, 100%, 25%), hsl(215, 100%, 85%));
+      background-color: light-dark(hsl(215, 25%, 80%), hsl(215, 100%, 30%));
     }
   }
 }
